--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <h2>HELLO</h2>
     <P>hello.<br>let me introduce of A.</P>
-    <img src="http://totallytype.com/img/anatomy/double.png">
+<!--     <img src="http://totallytype.com/img/anatomy/double.png"> -->
     
 </head>
 
